--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 /* Chap panel - sidebar */
 .sidebar {
-    background-color: #2c3e50;
+    background-color: #1a73cb;
     color: white;
     padding: 30px 20px;
     width: 35%;
@@ -99,7 +99,7 @@ body {
 }
 
 .skills span {
-    background-color: #2c3e50;
+    background-color: #2b81d6;
     color: white;
     padding: 5px 10px;
     border-radius: 5px;
